--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Iris">
-        <activity android:name=".activity.Users"></activity>
+        <activity android:name=".activity.Chat"></activity>
+        <activity android:name=".activity.Users" />
         <activity android:name=".activity.Register" />
         <activity android:name=".activity.Splash">
             <intent-filter>
